[package]
name = "device_support"
version = "0.1.0"
authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
epics = { git = "https://github.com/binp-automation/epics-rs", rev = "e4b901cefdb7f23df5b423ae41fa52521161bbdd" }
#{ path = "../../epics-rs" }
