[package]
name = "device_support"
version = "0.1.0"
authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
simple_logger = "1.2.0"
epics = { git = "https://github.com/binp-automation/epics-rs", rev = "6eecce37e81394c0f19e32f2cd9c61c35979f543" }
#{ path = "../../epics-rs" }
