[package]
name = "device_support"
version = "0.1.1"
authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
log = "0.4"
simple_logger = "1.2.0"
lazy_static = "1.3.0"
timer = "0.2.0"
enum-map = "0.5.0"
epics = { git = "https://github.com/binp-automation/epics-rs", rev = "db7b36486261c842d6919b5ddaef2e2836a5bb91" }
#{ path = "../../epics-rs" }
ksfc-lxi = { git = "https://github.com/binp-automation/ksfc-lxi", rev = "2e4e7487265c33190aec50f57bae6b61c8e2fc29" }
#{ path = "../../ksfc-lxi" }
